[r102139999] feat: translate strike ax

--- a/src/lang/en_US.json
+++ b/src/lang/en_US.json
@@ -123,5 +123,11 @@
     "auto": "Auto",
     "dark": "Dark",
     "light": "Light"
+  },
+  "accessibility": {
+    "strike": {
+      "start": "start of stricken text",
+      "end": "end of stricken text"
+    }
   }
 }
