--- a/src/lang/locales/en_US.json
+++ b/src/lang/locales/en_US.json
@@ -144,5 +144,6 @@
       "end": "end of stricken text"
     },
     "skip-navigation": "Skip Navigation"
-  }
+  },
+  "select-language": "Select the language for this page"
 }
