--- a/src/lang/locales.json
+++ b/src/lang/locales.json
@@ -1,5 +1,14 @@
-{
-  "en_US": "English",
-  "zh_CN": "简体中文",
-  "ja_JA": "日本語"
-}
+[
+  {
+    "code": "en",
+    "name": "English"
+  },
+  {
+    "code": "cn",
+    "name": "简体中文"
+  },
+  {
+    "code": "ja",
+    "name": "日本語"
+  }
+]
