--- a/src/lang/locales.json
+++ b/src/lang/locales.json
@@ -1,14 +1,14 @@
 [
   {
-    "code": "en",
+    "code": "en-US",
     "name": "English"
   },
   {
-    "code": "cn",
+    "code": "zh-CN",
     "name": "简体中文"
   },
   {
-    "code": "ja",
+    "code": "ja-JA",
     "name": "日本語"
   }
 ]
