--- a/src/lang/locales/ja_JA.json
+++ b/src/lang/locales/ja_JA.json
@@ -11,7 +11,8 @@
     "submit": "送信",
     "next": "次へ",
     "preview": {
-      "title": "プレビューなし | プレビュー | プレビュー"
+      "title": "プレビューなし | プレビュー | プレビュー",
+      "no-preview-available-step": "この手順では利用可能なプレビューがありません。"
     },
     "nav": {
       "chapters": "章",
@@ -28,14 +29,15 @@
     "project-files": "プロジェクトファイル",
     "estimated-time": "予測時間",
     "sections": {
-      "chapter": "章"
+      "chapter": "{number}章"
     },
     "question-of": "{total}問中の{index}問",
     "section-of": "{total}件中の{number}件",
     "overriding-title": "{title}の{newTitle}",
     "time": {
+      "format": "{number} {minutes}",
       "minutes": {
-        "full": "分 | 分 |{count}分",
+        "full": "分 | 分 | {count}分",
         "short": "分 | 分"
       },
       "hours": {
@@ -45,35 +47,35 @@
   },
   "documentation": {
     "title": "ドキュメント",
-    "navigator": "ドキュメントナビゲータ",
     "nav": {
       "breadcrumbs": "パンくずリスト",
-      "menu": "メニュー"
+      "menu": "メニュー",
+      "open-menu": "@:documentation.nav.menuを開く",
+      "close-menu": "@:documentation.nav.menuを閉じる"
     },
     "current-page": "現在のページは{title}です"
   },
-  "kind": {
+  "aside-kind": {
     "beta": "ベータ版",
     "experiment": "試験運用版",
     "important": "重要",
     "note": "注意",
     "tip": "ヒント",
-    "warning": "警告"
+    "warning": "警告",
+    "deprecated": "非推奨"
   },
   "change-type": {
     "added": "追加",
     "modified": "変更",
-    "deprecated": "非推奨"
+    "deprecated": "@:aside-kind.deprecated"
   },
   "verbs": {
     "hide": "非表示",
     "show": "表示",
-    "close": "閉じる",
-    "reset": "リセット",
-    "open": "開く"
+    "close": "閉じる"
   },
   "sections": {
-    "title": "セクション",
+    "title": "セクション{number}",
     "on-this-page": "このページの内容",
     "topics": "トピック",
     "default-implementations": "デフォルト実装",
@@ -108,21 +110,32 @@
   "api-reference": "APIリファレンス",
   "filter": {
     "title": "フィルタ",
-    "suggested": "提案",
-    "selected": "選択",
+    "search-symbols": "記号を検索",
+    "suggested-tags": "提案された{tags}",
+    "selected-tags": "選択した{tags}",
     "add-tag": "タグを追加",
-    "tag": "タグ",
-    "select-remove": "選択してリストから削除します。",
+    "tag-select-remove": "タグ。選択してリストから削除します。",
     "navigate": "シンボルを移動するには、上下左右の矢印キーを押します。",
-    "containing-symbols": "1個のシンボルを含む |{number}個のシンボルを含む",
-    "symbols-inside": "{total}個中{number}個のシンボルが中にあります"
+    "containing-symbols": "1個のシンボルを含む | {number}個のシンボルを含む",
+    "symbols-inside": "{total}個中{number}個のシンボルが中にあります",
+    "reset-filter": "フィルタをリセット"
   },
   "navigator": {
+    "title": "@:documentation.titleナビゲータ",
+    "open-navigator": "@:navigator.titleを開く",
+    "close-navigator": "@:navigator.titleを閉じる",
     "no-results": "結果が見つかりません。",
     "no-children": "使用できるデータがありません。",
     "error-fetching": "データを取得する際にエラーが起きました。",
-    "items-found": "項目が見つかりました。Tabキーを押すと項目をナビゲートできます。",
-    "navigator-is": "ナビゲータは{state}です"
+    "items-found": "項目が見つかりません | 1個の項目が見つかりました | {number}個の項目が見つかりましたTabキーを押すと項目をナビゲートできます。",
+    "navigator-is": "ナビゲータは{state}です",
+    "state": {
+      "loading": "読み込み中",
+      "ready": "準備完了"
+    },
+    "tags": {
+      "hide-deprecated": "@:aside-kind.deprecatedの項目を非表示"
+    }
   },
   "tab": {
     "request": "リクエスト",
@@ -134,11 +147,9 @@
     "minimum": "最小",
     "maximum": "最大",
     "possible-types": "使用できるタイプ",
-    "type": "タイプ",
-    "possible-values": "使用できる値",
-    "value": "値"
+    "possible-values": "使用できる値"
   },
-  "content-type": "コンテンツタイプ",
+  "content-type": "コンテンツタイプ: {value}",
   "read-only": "読み出し専用",
   "error": {
     "unknown": "原因不明のエラーが起きました。",
@@ -156,5 +167,15 @@
       "end": "取り消し線テキストの終了"
     },
     "skip-navigation": "ナビゲーションをスキップ"
+  },
+  "select-language": "このページの言語を選択",
+  "icons": {
+    "clear": "消去",
+    "web-service-endpoint": "Webサービスのエンドポイント",
+    "search": "検索"
+  },
+  "formats": {
+    "parenthesis": "（{content}）",
+    "colon": "{content}: "
   }
 }
