Add button title.

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -177,5 +177,11 @@
   "formats": {
     "parenthesis": "({content})",
     "colon": "{content}: "
+  },
+  "quicknav": {
+    "button": {
+      "label": "Open Quick Navigation",
+      "title": "Click or type / for quick navigation"
+    }
   }
 }
