[rdar://104924748] feat: store i18 banner in AppStore

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -1,6 +1,7 @@
 {
-  "language": "Language",
   "view-in": "View in English",
+  "continue-viewing": "Continue viewing in English",
+  "language": "Language",
   "video": {
     "replay": "Replay",
     "play": "Play",
