--- a/src/lang/locales/ja-JP.json
+++ b/src/lang/locales/ja-JP.json
@@ -1,6 +1,7 @@
 {
+  "view-in": "View in 日本語",
+  "continue-viewing": "Continue viewing in 日本語",
   "language": "言語",
-  "view-in": "看日文",
   "video": {
     "replay": "リプレイ",
     "play": "再生",
