--- a/src/lang/locales/zh-CN.json
+++ b/src/lang/locales/zh-CN.json
@@ -1,6 +1,7 @@
 {
+  "view-in": "View in 简体中文",
+  "continue-viewing": "Continue viewing in 简体中文",
   "language": "语言",
-  "view-in": "用中文查看",
   "video": {
     "replay": "重新播放",
     "play": "播放",
