--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -112,7 +112,7 @@
   "api-reference": "API Reference",
   "filter": {
     "title": "Filter",
-    "search-symbols": "Search symbols",
+    "search-symbols": "Search symbols in {technology}",
     "suggested-tags": "Suggested {tags}",
     "selected-tags": "Selected {tags}",
     "add-tag": "Add tag",
@@ -183,5 +183,11 @@
   "formats": {
     "parenthesis": "({content})",
     "colon": "{content}: "
+  },
+  "quicknav": {
+    "button": {
+      "label": "Open Quick Navigation",
+      "title": "Click or type / for quick navigation"
+    }
   }
 }
