--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -3,6 +3,7 @@
   "video": {
     "replay": "Replay",
     "play": "Play",
+    "pause": "Pause",
     "watch": "Watch intro video"
   },
   "tutorials": {
