[rdar://104924748] chore: updates i18n strings

--- a/src/lang/locales/ja-JP.json
+++ b/src/lang/locales/ja-JP.json
@@ -1,6 +1,6 @@
 {
-  "view-in": "View in 日本語",
-  "continue-viewing": "Continue viewing in 日本語",
+  "view-in": "日本語で表示",
+  "continue-viewing": "日本語で表示を続ける",
   "language": "言語",
   "video": {
     "replay": "リプレイ",
