--- a/src/lang/locales/zh-CN.json
+++ b/src/lang/locales/zh-CN.json
@@ -1,6 +1,6 @@
 {
-  "view-in": "View in 简体中文",
-  "continue-viewing": "Continue viewing in 简体中文",
+  "view-in": "以中文查看",
+  "continue-viewing": "继续以中文查看",
   "language": "语言",
   "video": {
     "replay": "重新播放",
