--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -1,4 +1,6 @@
 {
+  "view-in": "View in English",
+  "continue-viewing": "Continue viewing in English",
   "language": "Language",
   "video": {
     "replay": "Replay",
