[rdar://105394505] feat: start working on improves for AX on code blocks

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -168,6 +168,10 @@
       "start": "start of stricken text",
       "end": "end of stricken text"
     },
+    "code": {
+      "start": "start of code block",
+      "end": "end of code block"
+    },
     "skip-navigation": "Skip Navigation"
   },
   "select-language": "Select the language for this page",
