[rdar://105394505] feat: create CodeBlock component

--- a/src/lang/locales/ja-JP.json
+++ b/src/lang/locales/ja-JP.json
@@ -166,6 +166,10 @@
       "start": "取り消し線テキストの開始",
       "end": "取り消し線テキストの終了"
     },
+    "code": {
+      "start": "start of code block",
+      "end": "end of code block"
+    },
     "skip-navigation": "ナビゲーションをスキップ"
   },
   "select-language": "このページの言語を選択",
