Add a Pause state to the ReplayableVideoAsset (#559)
closes rdar://107269394

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -5,6 +5,7 @@
   "video": {
     "replay": "Replay",
     "play": "Play",
+    "pause": "Pause",
     "watch": "Watch intro video"
   },
   "tutorials": {
