--- a/src/lang/locales/zh-CN.json
+++ b/src/lang/locales/zh-CN.json
@@ -52,8 +52,8 @@
     "nav": {
       "breadcrumbs": "面包屑导航",
       "menu": "菜单",
-      "open-menu": "打开@:documentation.nav.menu",
-      "close-menu": "关闭@:documentation.nav.menu"
+      "open-menu": "打开菜单",
+      "close-menu": "关闭菜单"
     },
     "current-page": "当前页面为：{title}"
   },
@@ -69,7 +69,7 @@
   "change-type": {
     "added": "已添加",
     "modified": "已修改",
-    "deprecated": "@:aside-kind.deprecated"
+    "deprecated": "已弃用"
   },
   "verbs": {
     "hide": "隐藏",
@@ -123,9 +123,9 @@
     "reset-filter": "还原过滤条件"
   },
   "navigator": {
-    "title": "@:documentation.title 导航器",
-    "open-navigator": "打开@:navigator.title",
-    "close-navigator": "关闭@:navigator.title",
+    "title": "文档 导航器",
+    "open-navigator": "打开文档 导航器",
+    "close-navigator": "关闭文档 导航器",
     "no-results": "未找到结果。",
     "no-children": "无可用数据。",
     "error-fetching": "获取数据时出错。",
@@ -136,7 +136,7 @@
       "ready": "准备就绪"
     },
     "tags": {
-      "hide-deprecated": "隐藏@:aside-kind.deprecated"
+      "hide-deprecated": "隐藏已弃用"
     }
   },
   "tab": {
