[rdar://108904481] fix: japanese strings

--- a/src/lang/locales/ja-JP.json
+++ b/src/lang/locales/ja-JP.json
@@ -1,6 +1,6 @@
 {
-  "view-in": "英語で表示",
-  "continue-viewing": "英語で表示を続ける",
+  "view-in": "日本語で表示",
+  "continue-viewing": "日本語で表示を続ける",
   "language": "言語",
   "video": {
     "replay": "リプレイ",
