Aria-label that indicates scrolling behaviour interferes in headings content for screen readers (#698)
Resolves: rdar://111006953

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -182,7 +182,8 @@
       "start": "start of code block",
       "end": "end of code block"
     },
-    "skip-navigation": "Skip Navigation"
+    "skip-navigation": "Skip Navigation",
+    "in-page-link": "in page link"
   },
   "select-language": "Select the language for this page",
   "icons": {
