[rdar://115116964] fix: expose answer content to voiceover

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -24,7 +24,7 @@
     "assessment": {
       "check-your-understanding": "Check Your Understanding",
       "success-message": "Great job, you've answered all the questions for this tutorial.",
-      "answer-number-is": "Answer number {index} is",
+      "answer-result": "Answer {answer} is {result}",
       "correct": "correct",
       "incorrect": "incorrect",
       "next-question": "Next question"
