[rdar://115116952] fix: add legend and fieldset to assessment

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -27,7 +27,8 @@
       "answer-number-is": "Answer number {index} is",
       "correct": "correct",
       "incorrect": "incorrect",
-      "next-question": "Next question"
+      "next-question": "Next question",
+      "legend": "Possible answers"
     },
     "project-files": "Project files",
     "estimated-time": "Estimated Time",
