--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -66,7 +66,7 @@
       "view-symbol": "View symbol",
       "view-sample-code": "View sample code"
     },
-    "view-more": "View More"
+    "view-more": "View more"
   },
   "aside-kind": {
     "beta": "Beta",
