[rdar://117588570] feat: add Korean locale + new strings for Japanese and Chinese

--- a/src/lang/locales.json
+++ b/src/lang/locales.json
@@ -13,5 +13,10 @@
     "code": "ja-JP",
     "name": "日本語",
     "slug": "ja-JP"
+  },
+  {
+    "code": "ko-KR",
+    "name": "한국어",
+    "slug": "ko-KR"
   }
 ]
