--- a/src/lang/locales/zh-CN.json
+++ b/src/lang/locales/zh-CN.json
@@ -24,10 +24,11 @@
     "assessment": {
       "check-your-understanding": "检查你的理解程度",
       "success-message": "很棒，你回答了此教程的所有问题。",
-      "answer-number-is": "第 {index} 个答案",
+      "answer-result": "答案{answer}是{result}",
       "correct": "正确",
       "incorrect": "错误",
-      "next-question": "下一个问题"
+      "next-question": "下一个问题",
+      "legend": "可能的答案"
     },
     "project-files": "项目文件",
     "estimated-time": "预计时间",
@@ -64,7 +65,8 @@
       "view-api": "查看 API 集合",
       "view-symbol": "查看符号",
       "view-sample-code": "查看示例代码"
-    }
+    },
+    "view-more": "查看更多"
   },
   "aside-kind": {
     "beta": "Beta 版",
@@ -164,7 +166,8 @@
   "read-only": "只读",
   "error": {
     "unknown": "出现未知错误。",
-    "image": "图像无法载入"
+    "image": "图像无法载入",
+    "not-found": "找不到你所查找的页面。"
   },
   "color-scheme": {
     "select": "选择首选颜色方案",
@@ -181,7 +184,8 @@
       "start": "代码块开头",
       "end": "代码块结尾"
     },
-    "skip-navigation": "跳过导航"
+    "skip-navigation": "跳过导航",
+    "in-page-link": "在页面链接中"
   },
   "select-language": "选择此页面的语言",
   "icons": {
@@ -197,6 +201,7 @@
     "button": {
       "label": "打开快速导航",
       "title": "点按或键入 / 进行快速导航"
-    }
+    },
+    "preview-unavailable": "预览不可用"
   }
 }
