use localized string format for other declaration button
use localized string format for other declaration button

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -68,6 +68,10 @@
     },
     "view-more": "View more"
   },
+  "declarations": {
+    "other-declarations": "other declarations",
+    "all-declarations": "all declarations"
+  },
   "aside-kind": {
     "beta": "Beta",
     "experiment": "Experiment",
