don't split string into 2
don't split string into 2

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -69,8 +69,8 @@
     "view-more": "View more"
   },
   "declarations": {
-    "other-declarations": "other declarations",
-    "all-declarations": "all declarations"
+    "hide-other-declarations": "Hide other declarations",
+    "show-all-declarations": "Show all declarations"
   },
   "aside-kind": {
     "beta": "Beta",
