--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -68,6 +68,10 @@
     },
     "view-more": "View more"
   },
+  "declarations": {
+    "hide-other-declarations": "Hide other declarations",
+    "show-all-declarations": "Show all declarations"
+  },
   "aside-kind": {
     "beta": "Beta",
     "experiment": "Experiment",
