Mentioned In primary content section
Add a new "Mentioned In" section, which renders up to 5 links to articles that
mention a symbol by symbol link.

rdar://121899580

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -207,5 +207,6 @@
       "title": "Click or type / for quick navigation"
     },
     "preview-unavailable": "Preview unavailable"
-  }
+  },
+  "mentioned-in": "Mentioned in"
 }
