Add ARIA labels to pager controls.

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -213,6 +213,10 @@
     "roledescription": "content slider",
     "page": {
       "label": "content page {index} of {count}"
+    },
+    "control": {
+      "navigate-previous": "navigate to previous page of content",
+      "navigate-next": "navigate to next page of content"
     }
   },
   "links-grid": {
