Add all tags into FILTER_TAGS
Add all tags into FILTER_TAGS

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -140,7 +140,8 @@
       "sample-code": "Sample Code",
       "tutorials": "Tutorials",
       "articles": "Articles",
-      "web-service-endpoints": "Web Service Endpoints"
+      "web-service-endpoints": "Web Service Endpoints",
+      "hide-deprecated": "Hide Deprecated"
     }
   },
   "navigator": {
@@ -155,9 +156,6 @@
     "state": {
       "loading": "loading",
       "ready": "ready"
-    },
-    "tags": {
-      "hide-deprecated": "Hide Deprecated"
     }
   },
   "tab": {
