[rdar://120903895] Address feedback

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -8,7 +8,7 @@
     "play": "Play",
     "pause": "Pause",
     "watch": "Watch intro video",
-    "description": "Content description of this video",
+    "description": "Content description of this video: {alt}",
     "custom-controls": "Custom replay button is available below"
   },
   "tutorials": {
