Add generic pager component (#782)
* Add `Pager`.

Introduces a new "pager" component, which can be used to group pages of
content with only one page being visible at any given time. Users can
toggle the page of content currently being shown.

As an experiment, this pager component is being used on the grid-style
`@Links` so that only a set number of links are shown at one time.

* Add basic unit tests and docs for pager components.

* Rewrite `Pager` using composition API.

* Move license comment to top of file.

* Fix license header comments.

* Exploring animation.

* Fix animation to slide in and out correctly.

* Remove unused code.

* Remove more unused code.

* Remove unecessary property.

* Only render indicators for multiple pages.

* Adjust page size depending on breakpoint.

* Update indicator styling.

* Add gutter controls to advance/retreat pager.

* Visually center page controls within links card grid.

* Adjust page size for links grid based on its style.

* Rewrite `Pager` using options API for now.

* Rewrite specs for `TopicsLinkCardGrid`.

* Re-implement pager using overflow and native scrolling.

* Update active page indicator when scrolling naturally.

* Hide native scrollbar UI.

* Wait for scroll to finish before re-observing page visibility.

* Use auto scroll behavior to match CSS.

* Improve strategy for awaiting scroll.

* Fix `Pager` specs.

* Prevent selection of inactive pages.

* Add basic transition for gutter controls.

* Make pager an opt-in experience for links grid.

* Optimize `Pager` with only a single page.

* Only show compact next/prev controls at small breakpoint.

* Fix vertical centering of gutter pager control.

* Adjust styling of pager controls.

* Fix `PagerControl` spec.

* Use compact controls at medium breakpoint instead of small.

* Add ARIA attributes where relevant.

* Add ARIA labels to pager controls.

* Add class for grid style.


--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -208,5 +208,18 @@
     },
     "preview-unavailable": "Preview unavailable"
   },
-  "mentioned-in": "Mentioned in"
+  "mentioned-in": "Mentioned in",
+  "pager": {
+    "roledescription": "content slider",
+    "page": {
+      "label": "content page {index} of {count}"
+    },
+    "control": {
+      "navigate-previous": "navigate to previous page of content",
+      "navigate-next": "navigate to next page of content"
+    }
+  },
+  "links-grid": {
+    "label": "grid of links"
+  }
 }
