Add alt text for screen readers to describe video content (#784)
* [rdar://120903895] Render a hidden description with unique id for AX purposes if video provides an alt text

* [rdar://120903895] Add a description reference to Control Button in ReplayableVideoAsset

* [rdar://120903895] Add a description reference to video in VideoAsset

* [rdar://120903895] Update license headers

* [rdar://120903895] Replace id || null with alt ? id : null

* [rdar://120903895] Add `aria-label`, `aria-roledescription` and `aria-controls` to the video

* [rdar://120903895] Address feedback

* [rdar://120903895] Fix failing test

* [rdar://120903895] Move description

* [rdar://120903895] Change text for custom-controls

* [rdar://120903895] Delete wrong test

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -3,10 +3,13 @@
   "continue-viewing": "Continue viewing in English",
   "language": "Language",
   "video": {
+    "title": "Video",
     "replay": "Replay",
     "play": "Play",
     "pause": "Pause",
-    "watch": "Watch intro video"
+    "watch": "Watch intro video",
+    "description": "Content description of this video: {alt}",
+    "custom-controls": "Custom controls are available below"
   },
   "tutorials": {
     "title": "Tutorial | Tutorials",
