--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -138,7 +138,14 @@
     "navigate": "To navigate the symbols, press Up Arrow, Down Arrow, Left Arrow or Right Arrow",
     "siblings-label": "{number-siblings} of {total-siblings} symbols inside {parent-siblings}",
     "parent-label": "{number-siblings} of {total-siblings} symbols inside {parent-siblings} containing one symbol | {number-siblings} of {total-siblings} symbols inside {parent-siblings} containing {number-parent} symbols",
-    "reset-filter": "Reset Filter"
+    "reset-filter": "Reset Filter",
+    "tags": {
+      "sample-code": "Sample Code",
+      "tutorials": "Tutorials",
+      "articles": "Articles",
+      "web-service-endpoints": "Web Service Endpoints",
+      "hide-deprecated": "Hide Deprecated"
+    }
   },
   "navigator": {
     "title": "Documentation Navigator",
@@ -152,9 +159,6 @@
     "state": {
       "loading": "loading",
       "ready": "ready"
-    },
-    "tags": {
-      "hide-deprecated": "Hide Deprecated"
     }
   },
   "tab": {
