s/See Also/See also/

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -101,7 +101,7 @@
     "topics": "Topics",
     "default-implementations": "Default Implementations",
     "relationships": "Relationships",
-    "see-also": "See Also",
+    "see-also": "See also",
     "declaration": "Declaration",
     "details": "Details",
     "parameters": "Parameters",
