Support min/max length in "Attributes" section.

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -172,7 +172,9 @@
   "parameters": {
     "default": "Default",
     "minimum": "Minimum",
+    "minimumLength": "Minimum Length",
     "maximum": "Maximum",
+    "maximumLength": "Maximum Length",
     "possible-types": "Type | Possible types",
     "possible-values": "Value | Possible Values"
   },
