Change casing to "[Maximum/Minimum] length".

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -172,9 +172,9 @@
   "parameters": {
     "default": "Default",
     "minimum": "Minimum",
-    "minimumLength": "Minimum Length",
+    "minimumLength": "Minimum length",
     "maximum": "Maximum",
-    "maximumLength": "Maximum Length",
+    "maximumLength": "Maximum length",
     "possible-types": "Type | Possible types",
     "possible-values": "Value | Possible Values"
   },
