correct grammar in hard-coded string
correct grammar in hard-coded string

--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -133,7 +133,7 @@
   "filter": {
     "title": "Filter",
     "search": "Search",
-    "search-symbols": "Search symbols in {technology}",
+    "search-symbols": "Search for symbols in {technology}",
     "suggested-tags": "Suggested tag | Suggested tags",
     "selected-tags": "Selected tag | Selected tags",
     "add-tag": "Add tag",
