--- a/src/lang/locales/en-US.json
+++ b/src/lang/locales/en-US.json
@@ -207,7 +207,8 @@
   "icons": {
     "clear": "Clear",
     "web-service-endpoint": "Web Service Endpoint",
-    "search": "Search"
+    "search": "Search",
+    "copy": "Copy code to clipboard"
   },
   "formats": {
     "parenthesis": "({content})",
